Changed connection string to local database.

--- a/FinanceTracker/appsettings.json
+++ b/FinanceTracker/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BudgetFlow": "Data Source=LAPTOP-2CK3LKB9;Initial Catalog=BudgetFlow;Integrated Security=true;TrustServerCertificate=True;"
+    "BudgetFlow": "Data Source=DESKTOP-L5T5HFI;Initial Catalog=BudgetFlow;Integrated Security=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
